--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
+    "feather-icons": "^4.29.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.562.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.2",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.3",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^3.5.2"
+    "recharts": "^3.6.0",
+    "socket.io-client": "^4.8.3",
+    "swiper": "^12.0.3",
+    "web-vitals": "^3.5.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+     "start": "react-scripts start",
+    "build": "CI=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
